# project-needle-backend

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_signal_temporal_fields.py  003_add_signal_contribution_fields.py  004_rename_severity_add_direction.py  005_add_facility_to_unique_constraint.py  006_fix_contributiondirection_enum_case.py  007_add_statistical_method_field.py  008_add_temporal_zscore_fields.py  009_rename_zscore_to_method_specific.py  010_consolidate_signal_schema.py  011_add_signal_sub_classification.py  012_fix_signal_sub_classification_storage.py  013_fix_entity_dimensions_hash.py  014_remove_shap_tables.py  015_add_classification_tiers.py  016_convert_enums_to_varchar.py  017_remove_contribution_fields.py  018_drop_useless_signal_columns.py  019_drop_redundant_signal_columns.py  020_add_age_extension.py  021_drop_significance_direction.py  022_add_system_name.py  023_add_impact_metrics.py  024_drop_old_classification_columns.py  13bf50a1dd61_add_peer_percentile_trends.py  34008bf60430_add_signal_metadata.py  5c3ce8c4550e_add_metadata_per_period_to_signals.py  5f3c10d06091_add_simplified_classification_fields.py
dbt/: Dockerfile.docs  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/design/: schema_design_contributions.md  schema_design_node_results.md
dbt/macros/: classify_metric_domain.sql  compute_group_value.sql  compute_groupby_label.sql  map_anomaly_to_severity.sql  postgres_maintenance.sql
dbt/scripts/: generate_metric_catalog_seed.py  validate_semantic_dry.py
dbt/seeds/: metric_catalog.csv  ref_facilities.csv  schema.yml
dbt/tests/: fct_signals_grain_unique.sql  int_statistical_methods_agg_grain_unique.sql  test_data_integrity.py
docker/postgres-age/: Dockerfile
docs/: api-reference.md  architecture.md  data-models.md  dbt-pipeline.md  services.md
scripts/: enrich_temporal.py  load_insight_graph_to_dbt.py  load_modeling_to_dbt.py  pipeline.sh  validate_classification_e2e.py
src/: __init__.py  config.py  dependencies.py  main.py
tests/: conftest.py  test_health.py  test_ontology_router_registered.py
(+250 files in other folders)
