[project]
name = "quality-compass-backend"
version = "0.1.0"
description = "Quality Compass Healthcare Analytics Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0", # Sync driver for bulk data loading
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "dbt-postgres>=1.9.1",
    "scipy>=1.16.3",
    "click>=8.1.0",
]

[project.scripts]
signal-cli = "src.signals.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pydocstyle>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "D"]
ignore = [
    "E501",   # Line too long (handled by line-length)
    "SIM105", # Allow try-except-pass (contextlib.suppress not always clearer)
    "SIM117", # Allow nested with statements (sometimes clearer)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["D103"]  # Allow missing docstrings in test functions

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "tier1: Fast unit tests (< 1s each, no I/O, no services) - run in pre-commit",
]

[dependency-groups]
dev = [
    "pydocstyle>=6.3.0",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
